# API-to-AMT-Data-Lake

./: .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CONTRIBUTORS.md  NOTICES.md  README.md  pyproject.toml  setup.cfg
src/: .env  .env.example  .flake8  mypy.ini  pyproject.toml
src/dagster_data_lake/: README.md  dagster.yaml  setup.py  workspace.yaml
src/dagster_data_lake/dagster_data_lake/: __init__.py  repository.py
src/dagster_data_lake/dagster_data_lake/jobs/: pipe_api.py  say_hello.py
src/dagster_data_lake/dagster_data_lake/ops/: api.py
src/dagster_data_lake/dagster_data_lake/schedules/: my_hourly_schedule.py  schedule.py
src/dagster_data_lake/dagster_data_lake/sensors/: my_sensor.py  sensor.py
src/dagster_data_lake/dagster_data_lake_tests/test_graphs/: test_pipe_api.py  test_say_hello.py
src/dagster_data_lake/dagster_data_lake_tests/test_ops/: test_api.py  test_hello.py
src/dagter_data_lake/: README.md  setup.py  workspace.yaml
src/dagter_data_lake/dagter_data_lake/: __init__.py  repository.py
src/dagter_data_lake/dagter_data_lake/jobs/: say_hello.py
src/dagter_data_lake/dagter_data_lake/ops/: hello.py
src/dagter_data_lake/dagter_data_lake/schedules/: my_hourly_schedule.py
src/dagter_data_lake/dagter_data_lake/sensors/: my_sensor.py
src/dagter_data_lake/dagter_data_lake_tests/test_graphs/: test_say_hello.py
src/dagter_data_lake/dagter_data_lake_tests/test_ops/: test_hello.py
src/edfi_amt_data_lake/: __main__.py  api.py  convert_to_parquet.py  workspace.yaml
src/edfi_amt_data_lake/api/: api.py  changeVersion.py
src/edfi_amt_data_lake/dagster_config/: __init__.py  repository.py
src/edfi_amt_data_lake/dagster_config/jobs/: pipe_api.py
src/edfi_amt_data_lake/dagster_config/ops/: api.py
src/edfi_amt_data_lake/dagster_config/schedules/: schedule.py
src/edfi_amt_data_lake/dagster_config/sensors/: sensor.py
src/edfi_amt_data_lake/dagster_data_lake/: __init__.py  repository.py
src/edfi_amt_data_lake/dagster_data_lake/jobs/: pipe_api.py
src/edfi_amt_data_lake/dagster_data_lake/schedules/: schedule.py
src/edfi_amt_data_lake/dagster_data_lake_tests/test_graphs/: test_pipe_api.py
src/edfi_amt_data_lake/data_lake_tests/test_graphs/: test_pipe_api.py
src/edfi_amt_data_lake/endpoint/: endpoint.json
src/edfi_amt_data_lake/helper/: base.py  changeVersionValues.py  data_frame_generation_result.py  data_model_values.py  file.py  helper.py  token.py  utils.py
src/edfi_amt_data_lake/helper/descriptor_map/: descriptor_map.json
src/edfi_amt_data_lake/helper/endpoint/: endpoint.json
src/edfi_amt_data_lake/parquet/: amt.py  amt_parquet.py
src/edfi_amt_data_lake/parquet/AssessmentFact/: script.py
src/edfi_amt_data_lake/parquet/Common/: descriptor_mapping.py  functions.py  pandasWrapper.py
src/edfi_amt_data_lake/parquet/SchoolDim/: script.py
src/edfi_amt_data_lake/parquet/StudentEarlyWarningFactDim/: script.py
src/edfi_amt_data_lake/parquet/StudentSectionGradeFact/: script.py
src/edfi_amt_data_lake/parquet/amt/asmt/: asmt_collection.py
src/edfi_amt_data_lake/parquet/amt/base/: base_collection.py
src/edfi_amt_data_lake/parquet/amt/chrab/: chrab_collection.py
src/edfi_amt_data_lake/parquet/amt/engage/: engage_collection.py
src/edfi_amt_data_lake/parquet/amt/epp/: epp_collection.py
src/edfi_amt_data_lake/parquet/amt/equity/: equity_collection.py
src/edfi_amt_data_lake/parquet/amt/ews/: ews_collection.py
src/edfi_amt_data_lake/parquet/amt/qews/: qews_collection.py
(+54 files in other folders)
