[tool.poetry]
name = "edfi_amt_data_lake"
version = "0.1.0"
description = "Data Lake"
authors = ["EdFi"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^8.0.0"
pandas = "^1.4.3"
pydantic = "^1.9.1"
pytest = "^7.1.2"
python-dotenv = "^0.20.0"
python-decouple = "^3.6"
requests = "^2.28.1"
dagster = "^0.15.7"
dagit = "^0.15.7"
dagster-dbt = "^0.15.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
