[tool.poetry]
name = "edfi_amt_data_lake"
version = "0.1.0"
description = "Data Lake"
authors = ["EdFi"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.6.5"
aniso8601 = "7.0.0"
anyio = "3.6.1"
asgiref = "3.5.2"
attrs = "21.4.0"
beautifulsoup4 = "4.11.1"
bleach = "5.0.0"
certifi = "2022.6.15"
charset-normalizer = "2.0.12"
click = "8.1.3"
coloredlogs = "14.0"
croniter = "1.3.5"
dagit = "0.15.0"
dagster = "0.15.0"
dagster-graphql = "0.15.0"
defusedxml = "0.7.1"
docstring-parser = "0.14.1"
entrypoints = "0.4"
fastjsonschema = "2.15.3"
gql = "2.0.0"
graphene = "2.1.9"
graphql-core = "2.3.2"
graphql-relay = "2.0.1"
greenlet = "1.1.2"
grpcio = "1.46.3"
grpcio-health-checking = "1.43.0"
h11 = "0.13.0"
httptools = "0.4.0"
humanfriendly = "10.0"
idna = "3.3"
importlib-resources = "5.8.0"
Jinja2 = "3.1.2"
jsonschema = "4.6.0"
jupyter-client = "7.3.4"
jupyter-core = "4.10.0"
jupyterlab-pygments = "0.2.2"
Mako = "1.2.0"
MarkupSafe = "2.1.1"
mistune = "0.8.4"
nbclient = "0.6.4"
nbconvert = "6.5.0"
nbformat = "5.4.0"
nest-asyncio = "1.5.5"
packaging = "21.3"
pandocfilters = "1.5.0"
pendulum = "2.1.2"
pep562 = "1.1"
promise = "2.3"
protobuf = "3.20.1"
Pygments = "2.12.0"
pyparsing = "3.0.9"
pyrsistent = "0.18.1"
python-dateutil = "2.8.2"
python-dotenv = "0.20.0"
python-editor = "1.0.4"
pytz = "2022.1"
pytzdata = "2020.1"
PyYAML = "6.0"
pyzmq = "23.1.0"
requests = "2.28.0"
Rx = "1.6.1"
six = "1.16.0"
sniffio = "1.2.0"
soupsieve = "2.3.2.post1"
SQLAlchemy = "1.4.37"
starlette = "0.20.3"
tabulate = "0.8.9"
tinycss2 = "1.1.1"
toposort = "1.7"
tornado = "6.1"
tqdm = "4.64.0"
traitlets = "5.2.2.post1"
typing-compat = "0.1.0"
typing-extensions = "4.2.0"
urllib3 = "1.26.9"
uvicorn = "0.17.6"

watchdog = "2.1.9"
watchgod = "0.8.2"
webencodings = "0.5.1"
websockets = "10.3"
zipp = "3.8.0"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
